Fixed scrollbar on Chrome

--- a/client/src/app/components/question-area/question-area.component.scss
+++ b/client/src/app/components/question-area/question-area.component.scss
@@ -164,3 +164,7 @@ button.answer.selected {
 #buttons-container button {
     padding: 2rem;
 }
+::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: thin;
+}
